# Soft-Arm-SMART-Controller-

./: .gitignore  10Nmsmc.fig  DebugmainPositionTracking_SMCNDOB.m  SMCNDOB_2rad_v2.fig  SMCNDOB_5rad.fig  SMCNDOB_5rad_v2.fig  SMC_2rad.fig  Untitled.m  ai_cc.m  calibration.py  controller1.m  controllerArm.m  createfigure.m  data_collect_2.txt  exampleSMC.slx  fk_data.mat  func0313Fig_1_process.m  func0313Fig_2_process.m  func0313Fig_3_process.m  func3ptFilter.m  funcArcFrameTorque.m  funcBuildGreyBox.m  funcCamFramePlotMovingCC.m  funcCompareKinematicXYZ.m  funcCompareKinematicXYZ2models.m  funcCompareKinematicXYZ2models_3plots.m  funcEOMbaseFrame3D.m  funcFwdKinematic5link.m  funcGetPhiThetaRifromXYZ.m  funcGreyBoxSysID.m  funcHighLevelExpPositionTracking.m  funcPostProcess.m  funcSimDOB.m  funcSimDOBmatchDist.m  funcSimDOBmatchDistV2.m  funcSimNominal.m  funcSimSMCSPO.m  funcSimSMC_inputUncertain.m  funcSimSMC_inputUncertain_saturation.m  funcSimSMCv2.m  (+132 more)
0115/: data_collect_2.txt  data_collect_5.txt  data_collect_6.txt
0215/: data1.fig  data3.fig  data4.fig  data_collect_2.txt  data_collect_4.txt  data_collect_5.txt  readMe.txt
0216/: data1.fig  data5.fig  data_collect_2.txt  data_collect_4.txt
0228/: data_collect_2.txt  data_collect_3.txt
0302/: data1.fig  data2.fig  data3.fig  data_collect_2.txt  data_collect_3.txt
0309/: data_collect_3.txt  data_collect_4.txt  readMe.txt
0310/: data1.fig  data2.fig  data3.fig  data5.fig  data_collect_1.txt  data_collect_5.txt
0313/: data5.fig  data_collect_1.txt  data_collect_3.txt  data_collect_4.txt
0316/: data_collect_2.txt  data_collect_4.txt  data_collect_5.txt
py3_sorceCode/colcon_ws/install/arm_vrpn_pubsub/share/arm_vrpn_pubsub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
py3_sorceCode/colcon_ws/src/arm_vrpn-main/: CMakeLists.txt  README.md
py3_sorceCode/colcon_ws/src/arm_vrpn-main/src/: arm_mocap_pubsub.cpp  mocap_pubsub_checkflag.cpp
(+537 files in other folders)
